[package]
name = "ledger-signer"
version = "0.1.0"
edition = "2024"



[dependencies]
anyhow = "1"
bcs = "0.1.6"
base64 = "0.22.1"
hex = "0.4.3"
ledger-lib = "0.1.0"
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10"
sui-sdk-types = { version = "0.0.6", features = ["hash", "serde"] }
tokio = { version = "1", features = ["full"] }
